--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>druid</artifactId>
             <version>1.1.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
